--- a/book.tex
+++ b/book.tex
@@ -7,6 +7,7 @@
 \newcommand{\chaplbl}[2]{\chapter{#1}\label{#2}}
 \newcommand{\chapref}[1]{Chapter~\ref{#1}}
 \newcommand{\href}[2]{#2\footnote{#1}}
+\newcommand{\seclbl}[2]{\section{#1}\label{#2}}
 \newcommand{\secref}[1]{Section~\ref{#1}}
 
 \newenvironment{callout}[2]{\begin{quotation}\textbf{Callout: {#1}}\label{#2}}{\end{quotation}}
