--- a/carpentries.tex
+++ b/carpentries.tex
@@ -13,7 +13,7 @@ point, trainers should ask each trainee to add one non-overlapping
 question to a list, then go through that list.
 \end{callout}
 
-\subsection{History}\label{history}
+\seclbl{History}{sec:history}
 
 \href{http://software-carpentry.org}{Software Carpentry} was co-founded
 in 1998 by Brent Gorda and Greg Wilson, who identified a need for best
@@ -84,7 +84,7 @@ development and use. Its workshops are:
 \caption{Software Carpentry and Data Carpentry Comparison}
 \end{figure}
 
-\subsection{Workshop Operations}\label{workshop-operations}
+\seclbl{Workshop Operations}{sec:workshop-operations}
 
 We have recorded what we've learned about writing workshops in an
 \href{http://software-carpentry.org/workshops/operations/}{operations
@@ -108,7 +108,7 @@ workshop host. What situations might come up that these \emph{don't}
 answer?
 \end{challenge}
 
-\subsubsection{What Costs What?}\label{what-costs-what}
+\seclbl{What Costs What?}{sec:what-costs-what}
 
 Quoting the \href{http://software-carpentry.org/workshops/request/}{Software
 Carpentry workshop request page}:
@@ -199,7 +199,7 @@ than once, the SCF reserves the right to suspend them from the list of
 recommended instructors.
 \end{callout}
 
-\subsubsection{Materials}\label{materials}
+\seclbl{Materials}{sec:materials}
 
 All of Software and Data Carpentry's lessons materials are freely
 available under a permissive open license. You may use
@@ -224,7 +224,7 @@ advanced classes. In particular:
 \end{enumerate}
 \end{callout}
 
-\subsubsection{Using the Names}\label{using-the-names}
+\seclbl{Using the Names}{sec:using-the-names}
 
 However, the names ``Software Carpentry'' and ``Data Carpentry'' and
 their respective logos are all trademarked. You may only call a workshop
@@ -243,14 +243,14 @@ a Software Carpentry or Data Carpentry workshop if:
   number of people who attended).
 \end{itemize}
 
-\subsubsection{Who Can Teach What}\label{who-can-teach-what}
+\seclbl{Who Can Teach What}{sec:who-can-teach-what}
 
 Software Carpentry and Data Carpentry share a single instructor training
 program, but instructors must certify separately for each at the end:
 see the description of the
 instructor checkout procedure for details.
 
-\subsubsection{Setting Up}\label{setting-up}
+\seclbl{Setting Up}{sec:setting-up}
 
 In order to communicate with learners, and to help us keep track of
 who's taught what and where, each workshop's instructors create a
@@ -290,7 +290,7 @@ Git and Bash on Windows, and does the following:
 Please see the setup instructions in the workshop template for more
 details.
 
-\subsection{The Carpentry Community}\label{the-carpentry-community}
+\seclbl{The Carpentry Community}{sec:the-carpentry-community}
 
 There are several hubs of activity for the Software and Data Carpentry
 communities:
@@ -356,8 +356,7 @@ Join our discussion lists, subscribe to our blogs, and follow us on
 Twitter.
 \end{challenge}
 
-\subsubsection{A Culture of
-Contribution}\label{a-culture-of-contribution}
+\seclbl{A Culture of Contribution}{sec:a-culture-of-contribution}
 
 The administration, policies, practices and content of Software
 Carpentry and Data Carpentry rest on the shoulders of the communities
@@ -371,7 +370,7 @@ together the collective expertise of our teaching community to create
 collaborative lessons, share other materials, and improve the lessons
 via ``bug fixes'' as we go along.
 
-\subsubsection{Lesson Contribution}\label{lesson-contribution}
+\seclbl{Lesson Contribution}{sec:lesson-contribution}
 
 The lesson materials for Software and Data Carpentry are hosted on
 GitHub
@@ -388,7 +387,7 @@ issues, discussed by the community, and addressed via a pull request,
 which serves as a ``request'' to make changes, and can also be discussed
 before changes are merged.
 
-\subsubsection{Lesson Incubation}\label{lesson-incubation}
+\seclbl{Lesson Incubation}{sec:lesson-incubation}
 
 Maybe this instructor training has inspired you to go home and write
 your own fantastic lesson! If you'd like to model it after the Software
@@ -414,7 +413,7 @@ how we might make contribution more contributor-friendly, please let us
 know.
 \end{callout}
 
-\subsubsection{Beyond Lessons}\label{beyond-lessons}
+\seclbl{Beyond Lessons}{sec:beyond-lessons}
 
 While contribution is frequently seen in terms of contributing to
 specific lessons in either organization, there are many, many ways to
@@ -459,7 +458,7 @@ The checkout process to
 become a fully-fledged instructor will be one way to start connecting to
 the community and find which area will allow you to contribute best.
 
-\subsubsection{Governance}\label{governance}
+\seclbl{Governance}{sec:governance}
 
 Software Carpentry is a democracy: its seven-member
 \href{http://software-carpentry.org/scf/}{Steering Committee} is elected
