--- a/guide.tex
+++ b/guide.tex
@@ -1,6 +1,6 @@
 t\chaplbl{Teacher's Guide}{s:guide}
 
-\subsection{Checklists}\label{checklists}
+\seclbl{Checklists}{sec:checklists}
 
 See Atul Gawande's 2007 article
 ``\href{http://www.newyorker.com/magazine/2007/12/10/the-checklist}{The
@@ -225,7 +225,7 @@ Note that trainers do not examine their own trainees: having them
 examine each other's helps balance load and maintain consistency of
 curriculum and standards.
 
-\subsection{Messages}\label{messages}
+\seclbl{Messages}{sec:messages}
 
 You may use the following message templates to communicate with
 trainees:
@@ -245,7 +245,7 @@ trainees:
   Notify participants that they have not completed within the specified time.
 \end{itemize}
 
-\subsection{Introduction}\label{introduction}
+\seclbl{Introduction}{sec:introduction}
 
 To begin your class, the instructors should give a brief introduction
 that will convey their capacity to teach the material,
@@ -261,7 +261,7 @@ very least, everyone should add their name to the Etherpad, but its also
 good for everyone at a given site to know who all is in the group. Note:
 this can be done while setting up before the start of the class.
 
-\subsection{Exercises}\label{exercises}
+\seclbl{Exercises}{sec:exercises}
 
 \begin{itemize}
 \item
@@ -343,7 +343,7 @@ this can be done while setting up before the start of the class.
   specific. But that may be difficult to achieve.
 \end{itemize}
 
-\subsection{Video Recorded Lessons}\label{video-recorded-lessons}
+\seclbl{Video Recorded Lessons}{sec:video-recorded-lessons}
 
 One of the key elements of this training course is recording trainees
 and having them, and their peers, critique those recordings. We were
@@ -410,7 +410,7 @@ instructors at actual workshops to give one another feedback, and that's
 much easier to do once they've had some practice and have a rubric to
 follow.
 
-\subsection{Live Coding Demo Videos}\label{live-coding-demo-videos}
+\seclbl{Live Coding Demo Videos}{sec:live-coding-demo-videos}
 
 \textbf{\href{https://youtu.be/bXxBeNkKmJE}{Part 1}: how not to do it}
 
@@ -464,8 +464,7 @@ follow.
   how to interpret error-messages.
 \end{itemize}
 
-\subsection{Motivation and
-Demotivation}\label{motivation-and-demotivation}
+\seclbl{Motivation and Demotivation}{sec:motivation-and-demotivation}
 
 \begin{itemize}
 \item
@@ -483,7 +482,7 @@ Demotivation}\label{motivation-and-demotivation}
   future.
 \end{itemize}
 
-\subsection{The Big Picture}\label{the-big-picture}
+\seclbl{The Big Picture}{sec:the-big-picture}
 
 In 2014,
 \href{http://www.theguardian.com/commentisfree/2014/jun/16/saving-the-world-promise-not-fear-nature-environmentalism}{George
@@ -529,7 +528,7 @@ creators and consumers of their lessons, which wastes time and impedes
 the spread of good ideas. Changing \emph{that} could have more impact in
 the long run than anything to do with for loops and pull requests.
 
-\subsection{You Are Not Your Learners}\label{you-are-not-your-learners}
+\seclbl{You Are Not Your Learners}{sec:you-are-not-your-learners}
 
 Discussion of the practical implications of learning concepts brings us
 to our next big idea: people learn best when they care about the topic
@@ -573,14 +572,13 @@ this stuff, and that doing so will help them do more science faster,
 they are less compelling than things like automating repetitive tasks.
 \end{callout}
 
-\subsection{Logistics}\label{logistics}
+\seclbl{Logistics}{sec:logistics}
 
 This course has been taught as a multi-week online class, as a two-day
 in-person class, and as a two-day class in which the learners are in
 co-located groups and the instructor participates remotely.
 
-\subsubsection{Two-Day In-Person (Currently
-used)}\label{two-day-in-person-currently-used}
+\seclbl{Two-Day In-Person (Currently used)}{sec:two-day-in-person-currently-used}
 
 This was the second method we tried. The biggest change was the
 introduction of recorded teaching exercises.
@@ -612,8 +610,7 @@ introduction of recorded teaching exercises.
   and discussion are done aloud.
 \end{itemize}
 
-\subsubsection{Two-Day Online With Groups (Currently
-used)}\label{two-day-online-with-groups-currently-used}
+\seclbl{Two-Day Online With Groups (Currently used)}{sec:two-day-online-with-groups-currently-used}
 
 \begin{itemize}
 \item
@@ -628,8 +625,7 @@ used)}\label{two-day-online-with-groups-currently-used}
   We do the video lecture exercise as in the two-day in-person training.
 \end{itemize}
 
-\subsubsection{Multi-Week Online
-(Retired)}\label{multi-week-online-retired}
+\seclbl{Multi-Week Online (Retired)}{sec:multi-week-online-retired}
 
 This was the first method we tried.
 
@@ -663,7 +659,7 @@ This was the first method we tried.
   \end{itemize}
 \end{itemize}
 
-\subsection{Demo Sessions}\label{demo-sessions}
+\seclbl{Demo Sessions}{sec:demo-sessions}
 
 Checklist for instructor trainers hosting a live-coding demo session as
 part of a trainee's checkout procedure.
@@ -755,7 +751,7 @@ part of a trainee's checkout procedure.
   Add pass/fail information for the trainees in AMY.
 \end{itemize}
 
-\subsection{Terms}\label{terms}
+\seclbl{Terms}{sec:terms}
 
 \begin{discussion}{Something to Think About}{disc:something-to-think-about}
 
@@ -778,7 +774,7 @@ success?'' What are examples in your own experience of ``objective''
 assessments that reinforce the status quo?
 \end{challenge}
 
-\subsection{Improvement}
+\seclbl{Improvement}{sec:improvement}
 
 This training course only a start. If you'd like to help us make it
 better, we would welcome additions discussing:
@@ -822,7 +818,7 @@ way that we certify instructors, but any meaningful certification
 process would require a lot of resources to set up and run.
 \end{description}
 
-\subsection{Effecting Change}\label{effecting-change}
+\seclbl{Effecting Change}{sec:effecting-change}
 
 Henderson et al's
 ``Facilitating Change in Undergraduate STEM Instructional Practices''
@@ -939,7 +935,7 @@ The eight italicized approaches are:
   collective action can be stimulated, but not controlled.
 \end{itemize}
 
-\subsection{Why Do(n't) We Teach X?}\label{why-dont-we-teach-x}
+\seclbl{Why Do(n't) We Teach X?}{sec:why-dont-we-teach-x}
 
 Workshop attendees and trainee instructors often ask why we don't teach
 high-performance computing, machine learning, Perl, or a long list of
@@ -974,7 +970,7 @@ programming languages \cite{bib:stefik-summary}
 their  full-length paper gives an idea of what's possible \cite{bib:stefik-fixme}).
 \end{callout}
 
-\subsection{Why We're Not a MOOC}\label{why-were-not-a-mooc}
+\seclbl{Why We're Not a MOOC}{sec:why-were-not-a-mooc}
 
 \begin{quote}
 If you use robots to teach, you teach people to be robots.
@@ -992,7 +988,7 @@ early on; these are the ones who stick with most massive online courses,
 but many discussions of the effectiveness of such courses ignore this
 survivor bias.
 
-\subsection{Program Assessment}\label{program-assessment}
+\seclbl{Program Assessment}{sec:program-assessment}
 
 The Carpentries' greatest weakness is a lack of systematic assessment:
 while we have done some small-scale studies of the impact we have on our
