--- a/live.tex
+++ b/live.tex
@@ -7,7 +7,7 @@ participants following along. This section explains how it works, why we
 use it, and gives general tips for an effective live coding
 presentation.
 
-\subsection{Why Live Coding?}\label{why-live-coding}
+\seclbl{Why Live Coding?}{sec:why-live-coding}
 
 \begin{quote}
 Teaching is theater not cinema.\\--- Neal Davis
@@ -82,12 +82,12 @@ assumed learners are familiar with how to use a variable, the
 \texttt{basilisk.dat unicorn.dat} files.
 \end{challenge}
 
-\subsection{Live Coding Top 10}\label{live-coding-top-10}
+\seclbl{Live Coding Top 10}{sec:live-coding-top-10}
 
 Below follow ten tips to help you get started with effective live
 coding:
 
-\subsubsection{Be Seen and Heard}\label{be-seen-and-heard}
+\seclbl{Be Seen and Heard}{sec:be-seen-and-heard}
 
 If you are physically able to stand up for a couple of hours, do it
 while you are teaching. When you sit down, you are hiding yourself
@@ -109,7 +109,7 @@ is equipped with one. Your voice will be less tired, and you increase
 the chance of people with hearing difficulties being able to follow the
 workshop.
 
-\subsubsection{Take It Slow}\label{take-it-slow}
+\seclbl{Take It Slow}{sec:take-it-slow}
 
 For every command you type, every word of code you write, every menu
 item or website button you click, say out loud what you are doing while
@@ -124,8 +124,7 @@ for the Unix shell lesson.
 Other possibilities are to execute the same command a second time, or
 copy and paste the last command(s) into the workshop Etherpad.
 
-\subsubsection{Mirror Your Learner's Environment As Much As
-Possible}\label{mirror-your-learners-environment-as-much-as-possible}
+\seclbl{Mirror Your Learner's Environment As Much As Possible}{sec:mirror-your-learners-environment-as-much-as-possible}
 
 You may have set up your environment to your liking, with a very simple
 or rather fancy Unix prompt, colour schemes for your development
@@ -136,7 +135,7 @@ create a separate `bare-bone' user (login) account on their laptop, or a
 separate `teaching-only' account on the service being taught
 (e.g.~Github).
 
-\subsubsection{Use The Screen Wisely}\label{use-the-screen-wisely}
+\seclbl{Use The Screen Wisely}{sec:use-the-screen-wisely}
 
 Use a big font, and maximize the window. A black font on a white
 background works better than a light font on a dark background. When the
@@ -153,7 +152,7 @@ Pay attention to the lighting (not too dark, no lights directly on/above
 the presenter's screen) and if needed, reposition the tables so all
 learners can see the screen, and helpers can easily reach all learners.
 
-\subsubsection{Use Illustrations}\label{use-illustrations}
+\seclbl{Use Illustrations}{sec:use-illustrations}
 
 Most lesson material comes with illustrations, and these may help
 learners to understand the stages of the lesson and to organize the
@@ -165,7 +164,7 @@ learners understand the material, makes for a more lively workshop
 (you'll have to move between your laptop and the blackboard) and gathers
 the learners' attention to you as well.
 
-\subsubsection{Avoid Being Disturbed}\label{avoid-being-disturbed}
+\seclbl{Avoid Being Disturbed}{sec:avoid-being-disturbed}
 
 Turn off any notifications you may use on your laptop, such as those
 from social media, email, etc. Seeing notifications flash by on the
@@ -173,8 +172,7 @@ screen distracts you as well as the learners - and may even result in
 awkward situations when a message pops up you'd rather not have others
 see.
 
-\subsubsection{Stick to the Lesson
-Material}\label{stick-to-the-lesson-material}
+\seclbl{Stick to the Lesson Material}{sec:stick-to-the-lesson-material}
 
 The core Software and Data Carpentry lessons are developed
 collaboratively by many instructors and tried and tested at many
@@ -194,7 +192,7 @@ they can view their notes and the Etherpad session. This seems to be
 more reliable than displaying one virtual desktop while flipping back
 and forth to another.
 
-\subsubsection{Leave No Learner Behind}\label{leave-no-learner-behind}
+\seclbl{Leave No Learner Behind}{sec:leave-no-learner-behind}
 
 Give each learner two sticky notes of different colours, e.g., red and
 green. These can be held up for voting, but their real use is as status
@@ -220,7 +218,7 @@ too much, you could use the occasion to take the small break you had
 planned to take a bit later, giving the helper(s) time to fix the
 problem.
 
-\subsubsection{Embrace Mistakes}\label{embrace-mistakes}
+\seclbl{Embrace Mistakes}{sec:embrace-mistakes}
 
 No matter how well prepared you are, you will be making mistakes. Typo's
 are hard to avoid, you may overlook something from the lesson
@@ -235,7 +233,7 @@ out of most textbooks.
 The typos are the pedagogy\\--- Emily Jane McTavish
 \end{quote}
 
-\subsubsection{Have Fun}\label{have-fun}
+\seclbl{Have Fun}{sec:have-fun}
 
 Teaching is performance art and can be rather serious business. On the
 one hand, don't let this scare you - it is much easier than performing
