--- a/load.tex
+++ b/load.tex
@@ -4,7 +4,7 @@ In our final topic in educational psychology, we'll be learning more
 about human memory: specifically how to remove unnecessary ``load'' in
 order to facilitate learning.
 
-\subsection{Battling Theories}\label{battling-theories}
+\seclbl{Battling Theories}{sec:battling-theories}
 
 In 2006, Kirschner, Sweller, and Clark published a paper titled
 ``\href{http://www.cogtech.usc.edu/publications/kirschner\_Sweller\_Clark.pdf}{Why
@@ -77,7 +77,7 @@ example, people find it harder to learn from a video that has both
 narration and on-screen captions than from one that has either the
 narration or the captions but not both.
 
-\subsection{Faded Examples}\label{faded-examples}
+\seclbl{Faded Examples}{sec:faded-examples}
 
 According to cognitive load theory, searching for a solution strategy is
 an extra burden on top of applying that strategy. We can therefore
@@ -99,8 +99,8 @@ in the mental model that instructors want them to form.
 For example, someone teaching Python might start by explaining this:
 
 \begin{verbatim}
-# total\_length(["red", "green", "blue"]) => 12
-def total\_length(words):
+# total_length(["red", "green", "blue"]) => 12
+def total_length(words):
     total = 0
     for word in words:
         total += len(word)
@@ -112,11 +112,11 @@ def total\_length(words):
 then ask learners to fill in the blanks in:
 
 \begin{verbatim}
-# word\_lengths(["red", "green", "blue"]) => [3, 5, 4]
-def word\_lengths(words):
-    lengths = \_\_\_\_
+# word_lengths(["red", "green", "blue"]) => [3, 5, 4]
+def word_lengths(words):
+    lengths = ____
     for word in words:
-        lengths \_\_\_\_
+        lengths ____
     return lengths
 \end{verbatim}
 
@@ -125,11 +125,11 @@ def word\_lengths(words):
 The next problem might be:
 
 \begin{verbatim}
-# concatenate\_all(["red", "green", "blue"]) => "redgreenblue"
-def concatenate\_all(words):
-    result = \_\_\_\_
-    for \_\_\_\_ in \_\_\_\_:
-        \_\_\_\_
+# concatenate_all(["red", "green", "blue"]) => "redgreenblue"
+def concatenate_all(words):
+    result = ____
+    for ____ in ____:
+        ____
     return result
 \end{verbatim}
 
@@ -140,10 +140,8 @@ and learners would finally be asked to tackle:
 \begin{verbatim}
 # acronymize(["red", "green", "blue"]) => "RGB"
 def acronymize(words):
-    \_\_\_\_
+    ____
 \end{verbatim}
-
-\{: .source\}
 
 The key to constructing a good faded example is to think about the
 problem-solving strategy or solution pattern that it is meant to teach.
@@ -170,7 +168,7 @@ The following exercise should be done in groups of 2-3.
 \end{enumerate}
 \end{challenge}
 
-\subsection{Parsons Problems}\label{parsons-problems}
+\seclbl{Parsons Problems}{sec:parsons-problems}
 
 Another kind of exercise designed to reduce cognitive load is a
 \emph{Parsons Problem}, in which learners are presented with the jumbled
