--- a/memory.tex
+++ b/memory.tex
@@ -5,7 +5,7 @@ expertise from earlier stages of learning, how expertise can be helpful
 and harmful, and then describe concept maps, a tool that can help expose
 expertise.
 
-\subsection{Connectivity}\label{connectivity}
+\seclbl{Connectivity}{sec:connectivity}
 
 \secref{sec:novice} described
 the key difference between novices and competent practitioners. What
@@ -115,7 +115,7 @@ evaluating success are very stable, but is less effective when there are
 more factors at play.
 \end{callout}
 
-\subsection{Concept Maps}\label{concept-maps}
+\seclbl{Concept Maps}{sec:concept-maps}
 
 Our tool of choice to represent an expert's knowledge graph is the
 \emph{concept map}. A concept map is simply a picture of someone's
@@ -276,7 +276,7 @@ are. Those concept maps are then revealed simultaneously. The ensuing
 discussion can be\ldots{}vigorous.
 \end{callout}
 
-\subsection{Seven Plus or Minus Two}\label{seven-plus-or-minus-two}
+\seclbl{Seven Plus or Minus Two}{sec:seven-plus-or-minus-two}
 
 \begin{challenge}{The Serial Position Effect}{chal:the-serial-position-effect}
 
