--- a/motivation.tex
+++ b/motivation.tex
@@ -6,7 +6,7 @@ learners are motivated (and can be demotivated!) and describes ways that
 communities of practice can be welcoming (or threatening) to new
 members.
 
-\subsection{Motivation}\label{motivation}
+\seclbl{Motivation}{sec:motivation}
 
 People learn best when they care about the topic and believe they can
 master it. This presents us with a problem because most scientists don't
@@ -77,8 +77,7 @@ it fits on the 2x2 grid. As a group, we will discuss how these relate
 back to our ``teach most immediately useful first'' approach.
 \end{challenge}
 
-\subsection{Strategies for Motivating
-Learners}\label{strategies-for-motivating-learners}
+\seclbl{Strategies for Motivating Learners}{sec:strategies-for-motivating-learners}
 
 \emph{\href{http://www.amazon.com/How-Learning-Works-Research-Based-Jossey-Bass/dp/0470484101/}{How
 Learning Works}} contains this list of evidence-based methods to
@@ -129,7 +128,7 @@ you to teach. Save this as part of your teaching philosophy for future
 reference.
 \end{challenge}
 
-\subsection{Demotivation}\label{demotivation}
+\seclbl{Demotivation}{sec:demotivation}
 
 As noted in \secref{sec:intro}, we are privileged: most of our learners are physically
 safe, well fed, well educated, and highly motivated. Our challenge is
@@ -243,7 +242,7 @@ if people come with their labmates, they can work together to implement
 what they've learned.
 \end{callout}
 
-\subsubsection{Impostor Syndrome}\label{impostor-syndrome}
+\seclbl{Impostor Syndrome}{sec:impostor-syndrome}
 
 \href{https://en.wikipedia.org/wiki/Impostor\_syndrome}{Impostor
 syndrome} is the belief that one is not good enough for a job or
@@ -292,7 +291,7 @@ The Ada Initiative has
 excellent resources} for teaching about and dealing with imposter
 syndrome.
 
-\subsubsection{Mindset}\label{mindset}
+\seclbl{Mindset}{sec:mindset}
 
 Learners can be demotivated in subtler ways as well. For example, Dweck
 and others have studied the differences of
@@ -313,7 +312,7 @@ growth mindset, and subsequently achieve more. Studies have also shown
 that the simple action of telling learners about the different mindsets
 before a course can improve learning outcomes for the whole group.
 
-\subsection{Accessibility}\label{accessibility}
+\seclbl{Accessibility}{sec:accessibility}
 
 Not providing equal access to lessons and exercises is about as
 demotivating as it gets. If you look at
@@ -401,7 +400,7 @@ complete was your list of challenges? And did you notice that the first
 sentence in this challenge assumed you could actually walk?
 \end{callout}
 
-\subsection{Inclusivity}\label{inclusivity}
+\seclbl{Inclusivity}{sec:inclusivity}
 
 \emph{Inclusivity} is a policy of including people who might otherwise
 be excluded or marginalized. In computing, it means making a positive
