--- a/novice.tex
+++ b/novice.tex
@@ -4,8 +4,7 @@ We'll now get started with our first round of learning some theory, how
 it relates to Software and Data Carpentry, and putting that theory into
 practice.
 
-\subsection{Cognitive Development and Mental
-Models}\label{cognitive-development-and-mental-models}
+\seclbl{Cognitive Development and Mental Models}{sec:cognitive-development-and-mental-models}
 
 Effective learning is facilitated by the creation of a mental model of
 the domain, but what exactly do we mean by a mental model? One example
@@ -69,7 +68,7 @@ reinforce the incorrect mental model they've cobbled together.) Instead,
 our goal with novices is \emph{to help them construct a working mental
 model} so that they have something to attach facts to.
 
-\subsubsection{Why We Go Slowly}\label{why-we-go-slowly}
+\seclbl{Why We Go Slowly}{sec:why-we-go-slowly}
 
 The transition from novice to competent practitioner is no more and no
 less than the construction of correct (enough) categories, i.e., the
@@ -149,8 +148,7 @@ Visual Quickstart Guide}} are among the few other books in computing to
 have accomplished this.
 \end{callout}
 
-\subsection{Building Useful Mental
-Models}\label{building-useful-mental-models}
+\seclbl{Building Useful Mental Models}{sec:building-useful-mental-models}
 
 There are many ``positive'' strategies towards building mental models.
 Analogies, stories, role-play, and diagrams are ways to represent a
@@ -202,7 +200,7 @@ helps people build a model of the relationship between weight, volume,
 and density.
 \end{callout}
 
-\subsection{Assessing Mental Models}\label{assessing-mental-models}
+\seclbl{Assessing Mental Models}{sec:assessing-mental-models}
 
 How do we expose misconceptions, especially as they pertain to broken
 models? How can we, in-class, know whether the learners already
@@ -256,10 +254,6 @@ valuable insight.
 \begin{discussion}{Find the Bug}{disc:find-the-bug}
 
 What is the misconception associated with each wrong answer?
-\end{discussion}
-
-\begin{quote}
-\subsection{Solution}\label{solution}
 
 \begin{itemize}
 \item
@@ -273,7 +267,7 @@ What is the misconception associated with each wrong answer?
   If she answers 33 then she knows she has to carry the 1, but is
   carrying it back into the same column it came from. \{: .solution\}
 \end{itemize}
-\end{quote}
+\end{discussion}
 
 Each of these incorrect answers is a \emph{plausible distractor} with
 \emph{diagnostic power}. ``Plausible'' means that it looks like it could
