--- a/performance.tex
+++ b/performance.tex
@@ -7,7 +7,7 @@ techniques that make teaching effective cannot be mandated from above,
 but will develop into widespread effectiveness only as they are shared
 through a community of teaching practice.
 
-\subsection{Lesson Study}\label{lesson-study}
+\seclbl{Lesson Study}{sec:lesson-study}
 
 Many people assume that teachers are born, not made. From politicians to
 researchers and teachers themselves, most reformers have designed
@@ -213,7 +213,7 @@ axes: positive vs.~negative and content (what was said) vs.~presentation
 \end{enumerate}
 \end{challenge}
 
-\subsection{On Stage}\label{on-stage}
+\seclbl{On Stage}{sec:on-stage}
 
 \begin{discussion}{What Are Your Tells?}{disc:what-are-your-tells}
 
@@ -237,7 +237,7 @@ your teaching style can and should be based on your strengths. This is
 why it's just as important to identify strengths as weaknesses when
 trying to improve your teaching. It's good to know what you do well!
 
-\subsection{Feedback}\label{feedback}
+\seclbl{Feedback}{sec:feedback}
 
 Sometimes it can be hard to receive feedback, especially negative
 feedback.
