--- a/practices.tex
+++ b/practices.tex
@@ -4,7 +4,7 @@ We regard teaching as a performance art, no different from drama, music,
 or athletics. And as in those fields, we have a collection of small tips
 and tricks to make teaching work better.
 
-\subsection{Challenges}\label{challenges}
+\seclbl{Challenges}{sec:challenges}
 
 With live coding, it is easy for some learners to fall behind, and for
 other learners to get bored. Given the diversity of our learners'
@@ -65,7 +65,7 @@ because two learners are bored, the 38 who don't understand it will feel
 left out. All we can do is tell our learners what we're doing and why,
 and hope that they'll understand.
 
-\subsection{Other Practices}\label{other-practices}
+\seclbl{Other Practices}{sec:other-practices}
 
 \begin{description}
 \item[Sticky notes.]
@@ -169,7 +169,7 @@ Carpentry lessons are on their
 main lesson page.
 \end{description}
 
-\subsection{The Code of Conduct}\label{the-code-of-conduct}
+\seclbl{The Code of Conduct}{sec:the-code-of-conduct}
 
 Beyond the teaching practices and philosophies found in Software and
 Data Carpentry workshops, one of the most important characteristics of
