--- a/reference.tex
+++ b/reference.tex
@@ -1,6 +1,6 @@
 \chaplbl{References}{s:ref}
 
-\subsection{Top Ten}\label{top-ten}
+\seclbl{Top Ten}{sec:top-ten}
 
 \begin{enumerate}
 \item
@@ -27,7 +27,7 @@
   You can't help everyone, but you can always help someone.
 \end{enumerate}
 
-\subsection{A Few Other Things}\label{a-few-other-things}
+\seclbl{A Few Other Things}{sec:a-few-other-things}
 
 \begin{enumerate}
 \item
@@ -67,8 +67,7 @@ the core lessons as-is a few times, but you should know what you're
 improvising around---remember, our materials have been used hundreds of
 times, and probably address problems you don't yet know will arise.
 
-\subsubsection{What Kinds of Practice and Feedback Enhance
-Learning?}\label{what-kinds-of-practice-and-feedback-enhance-learning}
+\seclbl{What Kinds of Practice and Feedback Enhance Learning?}{sec:what-kinds-of-practice-and-feedback-enhance-learning}
 
 \begin{enumerate}
 \item
@@ -124,8 +123,7 @@ Learning?}\label{what-kinds-of-practice-and-feedback-enhance-learning}
   feedback is necessary.
 \end{enumerate}
 
-\subsubsection{How Does Students' Prior Knowledge Affect Their
-Learning?}\label{how-does-students-prior-knowledge-affect-their-learning}
+\seclbl{How Does Students' Prior Knowledge Affect Their Learning?}{sec:how-does-students-prior-knowledge-affect-their-learning}
 
 \begin{enumerate}
 \item
@@ -175,9 +173,7 @@ Learning?}\label{how-does-students-prior-knowledge-affect-their-learning}
   being applicable.
 \end{enumerate}
 
-\subsubsection{Why Do Student Development and Course Climate Matter for
-Student
-Learning?}\label{why-do-student-development-and-course-climate-matter-for-student-learning}
+\seclbl{Why Do Student Development and Course Climate Matter for Student Learning?}{sec:why-do-student-development-and-course-climate-matter-for-student-learning}
 
 \begin{enumerate}
 \item
@@ -235,8 +231,7 @@ Learning?}\label{why-do-student-development-and-course-climate-matter-for-studen
   new, so find ways to acknowledge their help as well.
 \end{enumerate}
 
-\subsubsection{How do Students Become Self-Directed
-Learners?}\label{how-do-students-become-self-directed-learners}
+\seclbl{How do Students Become Self-Directed Learners?}{sec:how-do-students-become-self-directed-learners}
 
 \begin{enumerate}
 \item
@@ -283,7 +278,7 @@ Learners?}\label{how-do-students-become-self-directed-learners}
   results should look like.
 \end{enumerate}
 
-\subsection{Motivational Strategies}\label{motivational-strategies}
+\seclbl{Motivational Strategies}{sec:motivational-strategies}
 
 \begin{itemize}
 \item
@@ -341,134 +336,190 @@ Learners?}\label{how-do-students-become-self-directed-learners}
   \end{enumerate}
 \end{itemize}
 
-\subsection{Books}\label{books}
+\seclbl{Books}{sec:books}
 
-\begin{description}
-\item[Susan Ambrose et al:
+\begin{itemize}
+
+\item
+  Susan Ambrose et al:
 \emph{\href{http://www.amazon.com/How-Learning-Works-Research-Based-Jossey-Bass/dp/0470484101/}{How
-Learning Works: Seven Research-Based Principles for Smart Teaching}}.]
+Learning Works: Seven Research-Based Principles for Smart Teaching}}.
 An excellent overview of what we know about education and why we believe
 it's true, covering everything from cognitive psychology to social
 factors.
-\item[Stephen D. Brookfield and Stephen Preskill: \emph{{[}The
-Discussion Book{]}{[}amazon-dicsussion{]}}.]
+
+\item
+  Stephen D. Brookfield and Stephen Preskill: \emph{{[}The
+Discussion Book{}{[}amazon-dicsussion{]}}.]
 Describes fifty different ways to get groups talking productively.
-\item[Elizabeth Green:
+
+\item
+  Elizabeth Green:
 \emph{\href{http://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393081591}{Building
-a Better Teacher}}.]
+a Better Teacher}}.
 A well-written look at why educational reforms in the past 50 years have
 mostly missed the mark, and what we should be doing instead.
-\item[Mark Guzdial:
+
+\item
+  Mark Guzdial:
 \emph{\href{http://www.amazon.com/Learner-Centered-Design-Computing-Education-Human-Centered/dp/1627053514/}{Learner-Centered
-Design of Computing Education: Research on Computing for Everyone}}.]
+Design of Computing Education: Research on Computing for Everyone}}.
 A well-researched investigation of what it means to design computing
 courses for everyone, not just people who are going to become
 professional programmers, from one of the leading researchers in CS
 education.
-\item[Doug Lemov:
+
+\item
+  Doug Lemov:
 \emph{\href{http://www.amazon.com/Teach-Like-Champion-2-0-Techniques/dp/1118901851/}{Teach
-Like a Champion 2.0}}.]
+Like a Champion 2.0}}.
 Presents 62 classroom techniques drawn from intensive study of thousands
 of hours of video of good teachers in action.
-\item[Therese Huston:
+
+\item
+  Therese Huston:
 \emph{\href{http://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674066170/}{Teaching
-What You Don't Know}}.]
+What You Don't Know}}.
 A pointed, funny, and very useful book that explores exactly what the
 title suggests.
-\item[James Lang:
+
+\item
+  James Lang:
 \emph{\href{https://www.amazon.com/Small-Teaching-Everyday-Lessons-Learning/dp/1118944496/}{Small
-Teaching}}.]
+Teaching}}.
 A short guide to evidence-based teaching practices that can be adopted
 without requiring large up-front investments of time and money.
-\item[Jane Margolis and Allan Fisher:
+
+\item
+  Jane Margolis and Allan Fisher:
 \emph{\href{http://www.amazon.com/Unlocking-Clubhouse-Computing-Jane-Margolis/dp/0262632691/}{Unlocking
-the Clubhouse: Women in Computing}}.]
+the Clubhouse: Women in Computing}}.
 A groundbreaking report on the gender imbalance in computing, and the
 steps Carnegie-Mellon took to address the problem.
-\item[Claude M. Steele:
+
+\item
+  Claude M. Steele:
 \emph{\href{http://www.amazon.com/Whistling-Vivaldi-Stereotypes-Affect-Issues/dp/0393339726/}{Whistling
-Vivaldi: How Stereotypes Affect Us and What We Can Do}}.]
+Vivaldi: How Stereotypes Affect Us and What We Can Do}}.
 Explains and explores stereotype threat and strategies for addressing
 it.
-\end{description}
 
-\subsection{Papers}\label{papers}
+\end{itemize}
 
-\begin{description}
-\item[Baume:
-``Writing and Using Good Learning Outcomes'']
+\seclbl{Papers}{sec:papers}
+
+\begin{itemize}
+
+\item
+  Baume:
+``Writing and Using Good Learning Outcomes''
 A useful detailed guide to constructing useful learning outcomes.
-\item[Borrego and Henderson:
-``Increasing the Use of Evidence-Based Teaching in STEM Higher Education: A Comparison of Eight Change Strategies'']
+
+\item
+  Borrego and Henderson:
+``Increasing the Use of Evidence-Based Teaching in STEM Higher Education: A Comparison of Eight Change Strategies''
 Describes eight approaches to effecting change in STEM education that
 form a useful framework for thinking about how Software Carpentry and
 Data Carpentry can change the world.
-\item[Brown and Altadmri:
-``Investigating Novice Programming Mistakes: Educator Beliefs vs Student Data'']
+
+\item
+  Brown and Altadmri:
+``Investigating Novice Programming Mistakes: Educator Beliefs vs Student Data''
 Compares teachers' opinions about common programming errors with data
 from over 100,000 students, and finds only weak consensus amongst
 teachers and between teachers and data.
-\item[Carroll, Smith-Kerker, Ford, and Mazur-Rimetz:
-``The Minimal Manual'' \emph{Human--Computer Interaction}, 3:2, 123-153, 1987.]
+
+\item
+  Carroll, Smith-Kerker, Ford, and Mazur-Rimetz:
+``The Minimal Manual'' \emph{Human--Computer Interaction}, 3:2, 123-153, 1987.
 Outlines an approach to documentation and instruction in which each
 lesson is one page long and describes how to accomplish one concrete
 task. Its focus on immediate application, error recognition and
 recovery, and reference use after training makes it an interesting model
 for Software and Data Carpentry.
-\item[Crouch and Mazur:
-``Peer Instruction: Ten Years of Experience and Results'']
+
+\item
+  Crouch and Mazur:
+``Peer Instruction: Ten Years of Experience and Results''
 An early report on peer instruction and its effects in the classroom.
-\item[Deans for Impact:
-``The Science of Learning'']
+
+\item
+  Deans for Impact:
+``The Science of Learning''
 Summarizes cognitive science research related to how students learn, and
 connects it to practical implications for teaching and learning.
-\item[Guzdial:
-``Exploring Hypotheses about Media Computation'']
+
+\item
+  Guzdial:
+``Exploring Hypotheses about Media Computation''
 A look back on 10 years of media computation research.
-\item[De Bruyckere et al:
-``Urban Myths About Learning and Education'']
+
+\item
+  De Bruyckere et al:
+``Urban Myths About Learning and Education''
 A one-page summary drawn from their book of the same name.
-\item[Gormally et al:
-``Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change'']
+
+\item
+  Gormally et al:
+``Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change''
 Summarizes best practices for providing instructional feedback and
 recommends specific strategies for sharing instructional expertise.
-\item[Guzdial:
-``Why Programming is Hard to Teach'']
+
+\item
+  Guzdial:
+``Why Programming is Hard to Teach''
 A chapter from
 \emph{\href{http://www.amazon.com/Making-Software-Really-Works-Believe/dp/0596808321/}{Making
 Software}} that explores why programming seems so much harder to teach
 than some other standard subjects.
-\item[Kirschner et al:
+
+\item
+  Kirschner et al:
 ``Why Minimal Guidance During Instruction Does Not Work:
-An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching'']
+An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching''
 Argues that inquiry-based learning is less effective for novices than
 guided instruction.
-\item[Lee:
-``What can I do today to create a more inclusive community in CS?''.]
+
+\item
+  Lee:
+``What can I do today to create a more inclusive community in CS?''.
 A brief, practical guide on exactly that with references to the research
 literature.
-\item[Mayer and Moreno:
-``Nine Ways to Reduce Cognitive Load in Multimedia Learning'']
+
+\item
+  Mayer and Moreno:
+``Nine Ways to Reduce Cognitive Load in Multimedia Learning''
 Shows how research into how we absorb and process information can be
 applied to the design of instructional materials.
-\item[Porter et al:
-``Success in Introductory Programming: What Works?'']
+
+\item
+  Porter et al:
+``Success in Introductory Programming: What Works?''
 Summarizes the evidence that three techniques---peer instruction, media
 computation, and pair programming---can significantly improve outcomes
 in introductory programming courses.
-\item[Wiggins and McTighe:
-``UbD in a Nutshell'']
+
+\item
+  Wiggins and McTighe:
+``UbD in a Nutshell''
 A four-page summary of the authors' take on reverse instructional
 design.
-\item[Wilson et al: ``Good Enough Practices in Scientific Computing''.]
+
+\item
+  Wilson et al: ``Good Enough Practices in Scientific Computing''.
 Describes and justifies a minimal set of computing practices that every
 researcher could and should adopt.
-\item[Wilson et al:
-``Best Practices for Scientific Computing'']
+
+\item
+  Wilson et al:
+``Best Practices for Scientific Computing''
 Describes and justifies the practices that mature scientific software
 developers ought to use.
-\item[Wilson:
-``Software Carpentry: Lessons Learned'']
+
+\item
+  Wilson:
+``Software Carpentry: Lessons Learned''
 Summarizes what we've learned in 17 years of running classes for
 scientists.
-\end{description}
+
+\end{itemize}
