--- a/terms.tex
+++ b/terms.tex
@@ -4,7 +4,7 @@ The following terms will support the discussions and activities in the
 rest of the training by giving us a common vocabulary to talk about
 teaching and learning to teach.
 
-\subsubsection{Educational Psychology}\label{educational-psychology}
+\seclbl{Educational Psychology}{sec:educational-psychology}
 
 \emph{Educational psychology} is the study of how people learn. It
 touches on everything from the neuropsychology of perception and the
@@ -66,7 +66,7 @@ creating connections between concepts. And yes, it would help if their
 names were less similar\ldots{}
 \end{callout}
 
-\subsubsection{Instructional Design}\label{instructional-design}
+\seclbl{Instructional Design}{sec:instructional-design}
 
 Educational psychology does not tell us how to teach on its own because
 it under-constrains the problem: in real life, several different
@@ -76,8 +76,7 @@ with actual learners, in order to find out how well they balance the
 different forces in play. This is called \emph{instructional design}
 (ID); if educational psychology is the science, ID is the engineering.
 
-\subsubsection{Pedagogical Content
-Knowledge}\label{pedagogical-content-knowledge}
+\seclbl{Pedagogical Content Knowledge}{sec:pedagogical-content-knowledge}
 
 In the end, effective teaching often depends on what the teacher knows.
 The things teachers know can be divided into:
@@ -130,7 +129,7 @@ with each other over the course of the next two days.
 \end{itemize}
 \end{callout}
 
-\subsection{Myths and Pseudoscience}\label{myths-and-pseudoscience}
+\seclbl{Myths and Pseudoscience}{sec:myths-and-pseudoscience}
 
 One
 \href{https://en.wikipedia.org/wiki/Learning\_styles\#Learning\_modalities}{well-known
