--- a/welcome.tex
+++ b/welcome.tex
@@ -79,8 +79,7 @@ yourself - people who want to help researchers learn about these ideas
 and share their own experience and enthusiasm. We hope that this
 training gives everyone a chance to meet new people and share ideas.
 
-\subsection{Assessing Trainee Motivation and Prior
-Knowledge}\label{assessing-trainee-motivation-and-prior-knowledge}
+\seclbl{Assessing Trainee Motivation and Prior Knowledge}{sec:assessing-trainee-motivation-and-prior-knowledge}
 
 It's important to first assess the prior knowledge of the workshop
 participants because this will influence (to some extent) how you
