--- a/lessons.tex
+++ b/lessons.tex
@@ -12,7 +12,7 @@ instructor. This will two forms: we'll talk about lesson design
 generally, and about the Software and Data Carpentry lessons in
 particular.
 
-\subsection{Writing Lessons}\label{writing-lessons}
+\seclbl{Writing Lessons}{sec:writing-lessons}
 
 A theme you may have noticed in our material so far is a need to start
 ``at the end''. To write a multiple-choice question, you have to start
@@ -24,7 +24,7 @@ down and start writing. The most important thing is to know your
 audience and what you want them to learn, and then to develop your
 lesson accordingly.
 
-\subsubsection{Learner Profiles}\label{learner-profiles}
+\seclbl{Learner Profiles}{sec:learner-profiles}
 
 The first piece - your audience, can be identified in many ways.
 Frequently people who are hosting a workshop have a specific audience in
@@ -68,8 +68,7 @@ colleague of your own. Who are they, what problems do they face, and how
 will this training help them? Try to be as specific as possible.
 \end{challenge}
 
-\subsubsection{Writing Learning
-Objectives}\label{writing-learning-objectives}
+\seclbl{Writing Learning Objectives}{sec:writing-learning-objectives}
 
 Summative and formative assessments help instructors figure out what
 they're going to teach, but in order to communicate that to learners and
@@ -278,8 +277,7 @@ following steps to evaluate it and reword it to make it sharper.
 \end{enumerate}
 \end{challenge}
 
-\subsection{Reverse Instructional
-Design}\label{reverse-instructional-design}
+\seclbl{Reverse Instructional Design}{sec:reverse-instructional-design}
 
 Most people design courses as follows:
 
@@ -362,15 +360,11 @@ while we're writing an MCQ, we want the notes we leave behind to present
 things in the order described above.
 \end{callout}
 
-\begin{quote}
-\subsection{Teaching to the Test}\label{teaching-to-the-test}
+\begin{discussion}{Teaching to the Test}{discuss:teaching-to-the-test}
 
 Is reverse instructional design ``teaching to the test''? I.e., does it
 steer teachers toward getting their students to pass an exam rather than
 learn things?
-
-\begin{quote}
-\subsection{Solution}\label{solution}
 
 Reverse instructional design is \emph{not} the same thing as ``teaching
 to the test''. When using RID, teachers set goals to aid in lesson
@@ -388,8 +382,7 @@ Scott pointed out in
 \emph{\href{http://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/}{Seeing
 Like a State}}, large organizations usually value uniformity over
 productivity. \{: .solution\}
-\end{quote}
-\end{quote}
+\end{discussion}
 
 \begin{callout}{The Minimal Manual}{callout:the-minimal-manual}
 
@@ -402,8 +395,7 @@ and recovery, and reference use after training makes it an interesting
 model for Software and Data Carpentry.
 \end{callout}
 
-\subsection{Software and Data Carpentry
-Lessons}\label{software-and-data-carpentry-lessons}
+\seclbl{Software and Data Carpentry Lessons}{sec:software-and-data-carpentry-lessons}
 
 It would be nice to say that the Software and Data Carpentry lessons
 were all developed using perfect reverse instructional design. While
@@ -448,7 +440,7 @@ people who are still learning the syntax of a programming language
 primarily on the mechanics of doing common operations in those
 languages.
 
-\subsubsection{Data Carpentry}\label{data-carpentry}
+\seclbl{Data Carpentry}{sec:data-carpentry}
 
 Data Carpentry's \href{http://datacarpentry.org/lessons/}{lessons}
 are domain-specific and cover data organization, manipulation, and
